--- a/.gitignore
+++ b/.gitignore
@@ -60,10 +60,16 @@ hs_err_pid*
 
 ### NetBeans ###
 nbproject/private/
+nbproject/
 build/
 nbbuild/
 dist/
 nbdist/
 .nb-gradle/
+*.xml
+
+### Intejelj ###
+*.iml
+out/
 
 # End of https://www.gitignore.io/api/java,netbeans
